--- a/portfolio-front/src/app/components/education/education.component.html
+++ b/portfolio-front/src/app/components/education/education.component.html
@@ -7,7 +7,7 @@
       type="button"
       class="btn add-btn btn-primary"
       data-bs-toggle="modal"
-      data-bs-target="#editcourse"
+      data-bs-target="#addcourse"
     >
       <i class="fa-solid fa-plus"></i>
     </button>
@@ -37,12 +37,7 @@
 
         <!--del- modal trigger button -->
 
-        <button
-          type="button"
-          class="btn del-btn"
-          data-bs-toggle="modal"
-          data-bs-target="#delete"
-        >
+        <button type="button" class="btn del-btn">
           <i class="fa-solid fa-trash-can"></i>
         </button>
       </div>
@@ -56,4 +51,4 @@
   </div>
 </section>
 <app-editcourse></app-editcourse>
-<app-delete></app-delete>
+<app-addcourse></app-addcourse>
