--- a/portfolio-front/src/app/modals/addproject/addproject.component.html
+++ b/portfolio-front/src/app/modals/addproject/addproject.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div class="modal" tabindex="-1" id="editcourse">
+  <div class="modal" tabindex="-1" id="addproject">
     <div class="modal-dialog">
       <div class="modal-content">
         <!-- header -->
         <div class="modal-header">
           <h3 class="modal-title">
-            &lt; ingrese nombre y datos del título &gt;
+            &lt; ingrese nombre y datos del proyecto &gt;
           </h3>
           <button
             type="button"
@@ -15,45 +15,53 @@
           ></button>
         </div>
         <!-- body -->
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="project-url">link de github</span>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="url del proyecto"
+            aria-label="project-url"
+            aria-describedby="project-url"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="nombre del proyecto"
+            aria-label="project-title"
+            aria-describedby="project-title"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text">fecha de inicio del proyecto</span>
+          <input
+            type="date"
+            class="form-control"
+            placeholder="fecha de duracion del proyecto"
+            aria-label="project-start"
+            aria-describedby="project-start"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text"
+            >fecha de finalizacion del proyecto</span
+          >
+          <input
+            type="date"
+            class="form-control"
+            placeholder="fecha de duracion del proyecto"
+            aria-label="project-end"
+            aria-describedby="project-end"
+          />
+        </div>
 
-        <div class="input-group mb-3">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="nombre del titulo"
-            aria-label="course-title"
-            aria-describedby="course-title"
-          />
+        <div class="input-group">
+          <span class="input-group-text">descripcion del proyecto</span>
+          <textarea class="form-control" aria-label="With textarea"></textarea>
         </div>
-        <div class="input-group mb-3">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="nombre de la institucion donde se realizo"
-            aria-label="course-institution"
-            aria-describedby="course-institution"
-          />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">fecha de inicio</span>
-          <input
-            type="date"
-            class="form-control"
-            placeholder="fecha de duracion del proyecto"
-            aria-label="course-start"
-            aria-describedby="course-start"
-          />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">fecha de finalizacion </span>
-          <input
-            type="date"
-            class="form-control"
-            placeholder="fecha de duracion del proyecto"
-            aria-label="course-end"
-            aria-describedby="course-end"
-          />
-        </div>
+
         <!-- footer -->
         <div class="modal-footer">
           <button
