--- a/portfolio-front/src/app/modals/addskill/addskill.component.html
+++ b/portfolio-front/src/app/modals/addskill/addskill.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div class="modal" tabindex="-1" id="editcourse">
+  <div class="modal" tabindex="-1" id="addskill">
     <div class="modal-dialog">
       <div class="modal-content">
         <!-- header -->
         <div class="modal-header">
           <h3 class="modal-title">
-            &lt; ingrese nombre y datos del título &gt;
+            &lt; ingrese nombre y valor de la nueva habilidad &gt;
           </h3>
           <button
             type="button"
@@ -15,44 +15,24 @@
           ></button>
         </div>
         <!-- body -->
-
         <div class="input-group mb-3">
+          <!-- <span class="input-group-text" id="skill-name"></span> -->
           <input
             type="text"
             class="form-control"
-            placeholder="nombre del titulo"
-            aria-label="course-title"
-            aria-describedby="course-title"
+            placeholder="nombre habilidad"
+            aria-label="skill-name"
+            aria-describedby="skill-name"
           />
         </div>
         <div class="input-group mb-3">
           <input
-            type="text"
+            type="number"
             class="form-control"
-            placeholder="nombre de la institucion donde se realizo"
-            aria-label="course-institution"
-            aria-describedby="course-institution"
+            aria-label="percentage number"
+            placeholder="porcentaje de dominio de la habilidad"
           />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">fecha de inicio</span>
-          <input
-            type="date"
-            class="form-control"
-            placeholder="fecha de duracion del proyecto"
-            aria-label="course-start"
-            aria-describedby="course-start"
-          />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">fecha de finalizacion </span>
-          <input
-            type="date"
-            class="form-control"
-            placeholder="fecha de duracion del proyecto"
-            aria-label="course-end"
-            aria-describedby="course-end"
-          />
+          <span class="input-group-text">%</span>
         </div>
         <!-- footer -->
         <div class="modal-footer">
