--- a/portfolio-front/src/app/modals/delete/delete.component.html
+++ b/portfolio-front/src/app/modals/delete/delete.component.html
@@ -1,6 +1,6 @@
 
+<!-- should this be a form?? -->
 
-<form>
 <div class="modal" tabindex="-1" id="delete">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -18,9 +18,9 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           cerrar
         </button>
-        <button type="button" class="btn btn-primary">guardar cambios</button>
+        <button type="submit" class="btn btn-primary">guardar cambios</button>
       </div>
     </div>
   </div>
 </div>
-</form>
+
