--- a/portfolio-front/src/app/components/experience/experience.component.css
+++ b/portfolio-front/src/app/components/experience/experience.component.css
@@ -8,10 +8,9 @@
     border-color: white;
     border-style: solid;
     border-width: 1px;
-  
     display: flex;
     flex-grow: 1;
-  
+    align-items: baseline;
     justify-content: center;
     padding: 1em;
     display: flex;
@@ -20,19 +19,18 @@
   
     transition: 2s;
   }
-  
-  .job h2 {
-    padding: 4%;
-  }
-  .job h3,
-  .job p{
-    padding: 2%;
-  
-  }
+
   
   .job:hover{
     transform: scale(1.1);
     border-bottom: solid;
     justify-content: center;
   }
-  
+p{
+    display: flex;
+    flex-grow: 1;
+    padding: 1em;  
+  }
+  h3{
+    padding: 0.5em;
+  }
