--- a/portfolio-front/src/app/components/skills/skills.component.css
+++ b/portfolio-front/src/app/components/skills/skills.component.css
@@ -1,23 +1,53 @@
 
 
+
+
 .skills{
 
     padding: 1em;
     margin: 2%;
+/* 
+
     background-color: #2a2b38;
     border-radius: 10px;
     border-width: 1em;
     border-color: white;
     border-style: solid;
     border-width: 1px;
-  
+   */
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    flex-direction: grid;
+    justify-content: center;
+    transition: 2s;
+
+    
+  }
+  .skill{
+
+    padding: 1em;
+    margin: 2%;
+
+    /* background-color: #2a2b38;
+    border-radius: 10px;
+    border-width: 1em;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 0 8px 10px 0 white;
+*/
+
+
+    transition: 2s; 
     display: flex;
     flex-grow: 1;
     flex-direction: column;
+    max-width: 300px;
     justify-content: center;
-  
-    
+
   }
+
   .skills h2 {
     padding: 4%;
   }
@@ -27,32 +57,10 @@
   
   }
 
-  .skill{
-
-    padding: 1em;
-    margin: 2%;
-    background-color: #2a2b38;
-    border-radius: 10px;
-    border-width: 1em;
-    border-color: white;
-    border-style: solid;
-    border-width: 1px;
-  
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    justify-content: center;
-    box-shadow: 0 8px 10px 0 white;
-    transition: 2s;
-    
-  }
-.skill__percentage{
-  /* fill in */
-}
-
+ 
 
   .skill:hover{
-    transform: scale(1.1);
+    transform: scale(1.3);
     box-shadow: none;
   }
   .project h2 {
@@ -70,4 +78,5 @@
     flex-direction: row;
     justify-content: space-between;
   }
+  
   
