--- a/portfolio-front/src/app/modals/addjob/addjob.component.html
+++ b/portfolio-front/src/app/modals/addjob/addjob.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div class="modal" tabindex="-1" id="editcourse">
+    <div class="modal" tabindex="-1" id="addjob">
     <div class="modal-dialog">
       <div class="modal-content">
         <!-- header -->
         <div class="modal-header">
           <h3 class="modal-title">
-            &lt; ingrese nombre y datos del título &gt;
+            &lt; ingrese nombre y datos del proyecto &gt;
           </h3>
           <button
             type="button"
@@ -15,61 +15,60 @@
           ></button>
         </div>
         <!-- body -->
-
+  
         <div class="input-group mb-3">
           <input
             type="text"
             class="form-control"
-            placeholder="nombre del titulo"
-            aria-label="course-title"
-            aria-describedby="course-title"
+            placeholder="lugar de trabajo"
+            aria-label="workplace"
+            aria-describedby="workplace"
           />
         </div>
         <div class="input-group mb-3">
           <input
             type="text"
             class="form-control"
-            placeholder="nombre de la institucion donde se realizo"
-            aria-label="course-institution"
-            aria-describedby="course-institution"
+            placeholder="titulo del trabajo"
+            aria-label="job-title"
+            aria-describedby="job-title"
           />
         </div>
+  
+        <div class="input-group mb-3">
+          <span class="input-group-text">descripcion del trabajo</span>
+          <textarea class="form-control" aria-label="With textarea"></textarea>
+        </div>
+  
         <div class="input-group mb-3">
           <span class="input-group-text">fecha de inicio</span>
           <input
             type="date"
             class="form-control"
             placeholder="fecha de duracion del proyecto"
-            aria-label="course-start"
-            aria-describedby="course-start"
+            aria-label="job-start"
+            aria-describedby="job-start"
           />
         </div>
         <div class="input-group mb-3">
-          <span class="input-group-text">fecha de finalizacion </span>
+          <span class="input-group-text">fecha de finalizacion</span>
           <input
             type="date"
             class="form-control"
             placeholder="fecha de duracion del proyecto"
-            aria-label="course-end"
-            aria-describedby="course-end"
+            aria-label="job-end"
+            aria-describedby="job-end"
           />
         </div>
+  
         <!-- footer -->
         <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-secondary"
-            data-bs-dismiss="modal"
-          >
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             cerrar
           </button>
-          <input
-            type="submit"
-            class="btn btn-primary"
-            value="guardar cambios"
-          />
+          <input type="submit" class="btn btn-primary" value="guardar cambios">
         </div>
       </div>
     </div>
   </div>
-</form>
+  </form>
