--- a/portfolio-front/src/app/modals/editjob/editjob.component.html
+++ b/portfolio-front/src/app/modals/editjob/editjob.component.html
@@ -1,6 +1,6 @@
 
-<form>
-<div class="modal" tabindex="-1" id="editjob">
+<form [formGroup]="form" (ngSubmit)="onSubmit($event)">
+  <div class="modal" tabindex="-1" id="editjob">
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- header -->
@@ -67,7 +67,7 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           cerrar
         </button>
-        <button type="button" class="btn btn-primary">guardar cambios</button>
+        <input type="submit" class="btn btn-primary" value="guardar cambios">
       </div>
     </div>
   </div>
