--- a/portfolio-front/src/app/modals/editpfp/editpfp.component.html
+++ b/portfolio-front/src/app/modals/editpfp/editpfp.component.html
@@ -1,50 +1,60 @@
-<div class="modal" tabindex="-1" id="editpfp">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <!-- header -->
-        <h3 class="modal-title">&lt; editar perfil &gt;</h3>
-        <button
-          type="button"
-          class="btn-close btn-close-white"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <!-- contenido -->
-        <!-- nombre -->
-        <div class="input-group mb-3">
+<form [formGroup]="form" (ngSubmit)="onSubmit($event)">
+  <div class="modal" tabindex="-1" id="editpfp">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <!-- header -->
+          <h3 class="modal-title">&lt; editar perfil &gt;</h3>
+          <button
+            type="button"
+            class="btn-close btn-close-white"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body">
+          <!-- contenido -->
+          <!-- nombre -->
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="nombre y apellido"
+              aria-label="profile-name"
+              aria-describedby="profile-name"
+            />
+          </div>
+          <!-- titulo del perfil -->
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="título"
+              aria-label="profile-title"
+              aria-describedby="profile-title"
+            />
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text">imagen de perfil</span>
+            <input type="file" class="form-control" id="inputGroupPfp" />
+          </div>
+        </div>
+        <!-- footer -->
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            cerrar
+          </button>
           <input
-            type="text"
-            class="form-control"
-            placeholder="nombre y apellido"
-            aria-label="profile-name"
-            aria-describedby="profile-name"
+            type="submit"
+            class="btn btn-primary"
+            value="guardar cambios"
           />
         </div>
-        <!-- titulo del perfil -->
-        <div class="input-group mb-3">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="título"
-            aria-label="profile-title"
-            aria-describedby="profile-title"
-          />
-        </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text">imagen de perfil</span>
-          <input type="file" class="form-control" id="inputGroupPfp" />
-        </div>
-      </div>
-      <!-- footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          cerrar
-        </button>
-        <button type="button" class="btn btn-primary">guardar cambios</button>
       </div>
     </div>
   </div>
-</div>
+</form>
