--- a/portfolio-front/src/app/modals/editskill/editskill.component.html
+++ b/portfolio-front/src/app/modals/editskill/editskill.component.html
@@ -1,3 +1,4 @@
+<form [formGroup]="form" (ngSubmit)="onSubmit($event)">
 <div class="modal" tabindex="-1" id="editskill">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -38,8 +39,9 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           cerrar
         </button>
-        <button type="button" class="btn btn-primary">guardar cambios</button>
+        <input type="submit" class="btn btn-primary" value="guardar cambios">
       </div>
     </div>
   </div>
 </div>
+</form>
