--- a/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
+++ b/portfolio-front/src/app/modals/loginmodal/loginmodal.component.html
@@ -1,124 +1,35 @@
-<!-- review  -->
-<form class="login-register-form">
-  <div class="section" id="loginModal">
-    <button
-      type="button "
-      class="btn-close btn-close-white"
-      routerLink="/"
-    ></button>
+<div class="section" id="loginModal">
+  <button
+    type="button "
+    class="btn-close btn-close-white"
+    routerLink="/"
+  ></button>
 
-    <div class="container">
-      <div class="row full-height justify-content-center">
-        <div class="col-12 text-center align-self-center py-5">
-          <div class="section pb-5 pt-5 pt-sm-2 text-center">
-            <h6 class="mb-0 pb-3">
-              <span>Iniciar sesión </span><span>Registrarme</span>
-            </h6>
-            <input
-              class="checkbox"
-              type="checkbox"
-              id="reg-log"
-              name="reg-log"
-            />
-            <label for="reg-log"></label>
-            <div class="card-3d-wrap mx-auto">
-              <div class="card-3d-wrapper">
-                <div class="card-front">
-                  <div class="center-wrap">
-                    <div class="section text-center">
-                      <h4 class="mb-4 pb-3">Iniciar Sesión</h4>
-                      <div class="form-group">
-                        <input
-                          type="email"
-                          name="logemail"
-                          class="form-style"
-                          placeholder="email"
-                          id="logemail"
-                          autocomplete="off"
-                        />
-                        <i class="input-icon uil uil-at"></i>
-                      </div>
-                      <div class="form-group mt-2">
-                        <input
-                          type="password"
-                          name="logpass"
-                          class="form-style"
-                          placeholder="contraseña"
-                          id="logpass"
-                          autocomplete="off"
-                        />
-                        <i class="input-icon uil uil-lock-alt"></i>
-                      </div>
-                      <input
-                        class="btn mt-4"
-                        type="submit"
-                        value="Continuar"
-                      /><br />
-
-                      <!-- <a href="#" class="btn mt-4"> Volver al inicio </a> -->
-                      <!-- <p class="mb-0 mt-4 text-center">
-                        <a href="#0" class="link">Olvidé mi contraseña</a>
-            ------ ------------------------- 
-                      </p> -->
-                    </div>
-                  </div>
-                </div>
-
-                <!--   -->
-                <div class="card-back">
-                  <div class="center-wrap">
-                    <div class="section text-center">
-                      <h4 class="mb-4 pb-3">Registrarme</h4>
-                      <!-- campo 1 -->
-                      <div class="form-group">
-                        <input
-                          type="text"
-                          name="logname"
-                          class="form-style"
-                          placeholder="nombre"
-                          id="logname"
-                          autocomplete="off"
-                        />
-                        <i class="input-icon uil uil-user"></i>
-                      </div>
-                      <!-- campo 2 -->
-                      <div class="form-group mt-2">
-                        <input
-                          type="email"
-                          name="logemail"
-                          class="form-style"
-                          placeholder="email"
-                          id="logemail"
-                          autocomplete="off"
-                        />
-                        <i class="input-icon uil uil-at"></i>
-                      </div>
-                      <!-- campo 3-->
-                      <div class="form-group mt-2">
-                        <input
-                          type="password"
-                          name="logpass"
-                          class="form-style"
-                          placeholder="contraseña"
-                          id="logpass"
-                          autocomplete="off"
-                        />
-                        <i class="input-icon uil uil-lock-alt"></i>
-                      </div>
-                      <input
-                        class="btn mt-4"
-                        type="submit"
-                        value="Continuar"
-                      /><br />
-                    </div>
-                  </div>
-                </div>
-                <!-- ------- -->
+  <div class="container">
+    <div class="row full-height justify-content-center">
+      <div class="col-12 text-center align-self-center py-5">
+        <div class="section pb-5 pt-5 pt-sm-2 text-center">
+          <h6 class="mb-0 pb-3">
+            <span>Iniciar sesión </span><span>Registrarme</span>
+          </h6>
+          <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+          <label for="reg-log"></label>
+          <div class="card-3d-wrap mx-auto">
+            <div class="card-3d-wrapper">
+              <!-- card front -->
+              <div class="card-front">
+                <app-log></app-log>
               </div>
+
+              <!-- card back -->
+              <div class="card-back">
+              <app-register></app-register>
+            </div>
+            <!-- end card -->
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</form>
+</div>
