--- a/portfolio-front/src/app/modals/addproject/addproject.component.html
+++ b/portfolio-front/src/app/modals/addproject/addproject.component.html
@@ -5,7 +5,7 @@
         <!-- header -->
         <div class="modal-header">
           <h3 class="modal-title">
-            &lt; ingrese nombre y datos del proyecto &gt;
+            &lt; ingrese nombre y datos del nuevo proyecto &gt;
           </h3>
           <button
             type="button"
@@ -23,6 +23,7 @@
             placeholder="url del proyecto"
             aria-label="project-url"
             aria-describedby="project-url"
+            formControlName="url"
           />
         </div>
         <div class="input-group mb-3">
@@ -32,6 +33,7 @@
             placeholder="nombre del proyecto"
             aria-label="project-title"
             aria-describedby="project-title"
+            formControlName="title"
           />
         </div>
         <div class="input-group mb-3">
@@ -42,6 +44,7 @@
             placeholder="fecha de duracion del proyecto"
             aria-label="project-start"
             aria-describedby="project-start"
+            formControlName="start"
           />
         </div>
         <div class="input-group mb-3">
@@ -54,6 +57,7 @@
             placeholder="fecha de duracion del proyecto"
             aria-label="project-end"
             aria-describedby="project-end"
+            formControlName="end"
           />
         </div>
 
