--- a/portfolio-front/src/app/modals/editabout/editabout.component.html
+++ b/portfolio-front/src/app/modals/editabout/editabout.component.html
@@ -19,6 +19,7 @@
             <textarea
               class="form-control"
               aria-label="With textarea"
+              formControlName="about"
             ></textarea>
           </div>
 
