--- a/portfolio-front/src/app/modals/addskill/addskill.component.html
+++ b/portfolio-front/src/app/modals/addskill/addskill.component.html
@@ -23,6 +23,7 @@
             placeholder="nombre habilidad"
             aria-label="skill-name"
             aria-describedby="skill-name"
+            formControlName="name"
           />
         </div>
         <div class="input-group mb-3">
@@ -31,6 +32,7 @@
             class="form-control"
             aria-label="percentage number"
             placeholder="porcentaje de dominio de la habilidad"
+            formControlName="percentage"
           />
           <span class="input-group-text">%</span>
         </div>
