--- a/portfolio-front/src/app/modals/editjob/editjob.component.html
+++ b/portfolio-front/src/app/modals/editjob/editjob.component.html
@@ -1,75 +1,91 @@
 
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div class="modal" tabindex="-1" id="editjob">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <!-- header -->
-      <div class="modal-header">
-        <h3 class="modal-title">
-          &lt; ingrese nombre y datos del proyecto &gt;
-        </h3>
-        <button
-          type="button"
-          class="btn-close btn-close-white"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <!-- body -->
+  <div class="modal" tabindex="-1" id="addjob">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- header -->
+        <div class="modal-header">
+          <h3 class="modal-title">
+            &lt; ingrese nombre y datos del proyecto &gt;
+          </h3>
+          <button
+            type="button"
+            class="btn-close btn-close-white"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <!-- body -->
 
-      <div class="input-group mb-3">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="lugar de trabajo"
-          aria-label="workplace"
-          aria-describedby="workplace"
-        />
-      </div>
-      <div class="input-group mb-3">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="titulo del trabajo"
-          aria-label="job-title"
-          aria-describedby="job-title"
-        />
-      </div>
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="lugar de trabajo"
+            aria-label="workplace"
+            aria-describedby="workplace"
+            formControlName="place"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="titulo del trabajo"
+            aria-label="job-title"
+            aria-describedby="job-title"
+            formControlName="title"
+          />
+        </div>
 
-      <div class="input-group mb-3">
-        <span class="input-group-text">descripcion del trabajo</span>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-      </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text">descripcion del trabajo</span>
+          <textarea
+            class="form-control"
+            aria-label="With textarea"
+            formControlName="place"
+          ></textarea>
+        </div>
 
-      <div class="input-group mb-3">
-        <span class="input-group-text">fecha de inicio</span>
-        <input
-          type="date"
-          class="form-control"
-          placeholder="fecha de duracion del proyecto"
-          aria-label="job-start"
-          aria-describedby="job-start"
-        />
-      </div>
-      <div class="input-group mb-3">
-        <span class="input-group-text">fecha de finalizacion</span>
-        <input
-          type="date"
-          class="form-control"
-          placeholder="fecha de duracion del proyecto"
-          aria-label="job-end"
-          aria-describedby="job-end"
-        />
-      </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text">fecha de inicio</span>
+          <input
+            type="date"
+            class="form-control"
+            placeholder="fecha de duracion del proyecto"
+            aria-label="job-start"
+            aria-describedby="job-start"
+            formControlName="start"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text">fecha de finalizacion</span>
+          <input
+            type="date"
+            class="form-control"
+            placeholder="fecha de duracion del proyecto"
+            aria-label="job-end"
+            aria-describedby="job-end"
+            formControlName="end"
+          />
+        </div>
 
-      <!-- footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-          cerrar
-        </button>
-        <input type="submit" class="btn btn-primary" value="guardar cambios">
+        <!-- footer -->
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            cerrar
+          </button>
+          <input
+            type="submit"
+            class="btn btn-primary"
+            value="guardar cambios"
+          />
+        </div>
       </div>
     </div>
   </div>
-</div>
 </form>
