--- a/portfolio-front/src/app/modals/addjob/addjob.component.html
+++ b/portfolio-front/src/app/modals/addjob/addjob.component.html
@@ -5,7 +5,7 @@
         <!-- header -->
         <div class="modal-header">
           <h3 class="modal-title">
-            &lt; ingrese nombre y datos del nuevo proyecto &gt;
+            &lt; ingrese nombre y datos del trabajo &gt;
           </h3>
           <button
             type="button"
@@ -26,6 +26,14 @@
             formControlName="place"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="Place?.errors && Place?.touched">
+          <p *ngIf="Place?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
         <div class="input-group mb-3">
           <input
             type="text"
@@ -36,38 +44,70 @@
             formControlName="title"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="Title?.errors && Title?.touched">
+          <p *ngIf="Title?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
 
         <div class="input-group mb-3">
           <span class="input-group-text">descripcion del trabajo</span>
           <textarea
             class="form-control"
             aria-label="With textarea"
-            formControlName="place"
+            formControlName="description"
           ></textarea>
         </div>
+        <!-- logica dato -->
+        <div *ngIf="Description?.errors && Description?.touched">
+          <p *ngIf="Description?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
 
         <div class="input-group mb-3">
           <span class="input-group-text">fecha de inicio</span>
           <input
             type="date"
             class="form-control"
-            placeholder="fecha de duracion del proyecto"
+            placeholder="fecha de duracion del trabajo"
             aria-label="job-start"
             aria-describedby="job-start"
             formControlName="start"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="Start?.errors && Start?.touched">
+          <p *ngIf="Start?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
         <div class="input-group mb-3">
           <span class="input-group-text">fecha de finalizacion</span>
           <input
             type="date"
             class="form-control"
-            placeholder="fecha de duracion del proyecto"
+            placeholder="fecha de duracion del trabajo"
             aria-label="job-end"
             aria-describedby="job-end"
             formControlName="end"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="End?.errors && End?.touched">
+          <p *ngIf="End?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
 
         <!-- footer -->
         <div class="modal-footer">
