--- a/portfolio-front/src/app/modals/editbanner/editbanner.component.html
+++ b/portfolio-front/src/app/modals/editbanner/editbanner.component.html
@@ -16,8 +16,16 @@
         <div class="modal-body">
           <div class="input-group mb-3">
             <label class="input-group-text" for="inputGroupBanner">subir</label>
-            <input type="file" class="form-control" id="inputGroupBanner" />
+            <input type="file" class="form-control" id="inputGroupBanner" formControlName="banner" />
           </div>
+          <!-- logica dato -->
+          <div *ngIf="Banner?.errors && Banner?.touched">
+            <p *ngIf="Banner?.hasError('required')" class="error">
+              El dato es requerido.
+            </p>
+          </div>
+          <br />
+          <!--  -->
         </div>
         <div class="modal-footer">
           <button
