--- a/portfolio-front/src/app/modals/editcourse/editcourse.component.html
+++ b/portfolio-front/src/app/modals/editcourse/editcourse.component.html
@@ -26,6 +26,14 @@
             formControlName="title"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="Title?.errors && Title?.touched">
+          <p *ngIf="Title?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
         <div class="input-group mb-3">
           <input
             type="text"
@@ -36,6 +44,14 @@
             formControlName="institution"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="Institution?.errors && Institution?.touched">
+          <p *ngIf="Institution?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
         <div class="input-group mb-3">
           <span class="input-group-text">fecha de inicio</span>
           <input
@@ -47,6 +63,14 @@
             formControlName="start"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="Start?.errors && Start?.touched">
+          <p *ngIf="Start?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
         <div class="input-group mb-3">
           <span class="input-group-text">fecha de finalizacion </span>
           <input
@@ -58,6 +82,14 @@
             formControlName="end"
           />
         </div>
+        <!-- logica dato -->
+        <div *ngIf="End?.errors && End?.touched">
+          <p *ngIf="End?.hasError('required')" class="error">
+            El dato es requerido.
+          </p>
+        </div>
+        <br />
+        <!--  -->
         <!-- footer -->
         <div class="modal-footer">
           <button
