--- a/portfolio-front/src/app/modals/editcourse/editcourse.component.html
+++ b/portfolio-front/src/app/modals/editcourse/editcourse.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div class="modal" tabindex="-1" id="addcourse">
+  <div class="modal" tabindex="-1" id="editcourse">
     <div class="modal-dialog">
       <div class="modal-content">
         <!-- header -->
