--- a/portfolio-front/src/app/modals/editjob/editjob.component.html
+++ b/portfolio-front/src/app/modals/editjob/editjob.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-  <div class="modal" tabindex="-1" id="addjob">
+  <div class="modal" tabindex="-1" id="editjob">
     <div class="modal-dialog">
       <div class="modal-content">
         <!-- header -->
